<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".SelectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/give_us_some_basic_information"
            android:textColor="@color/bl"
            android:textSize="32sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="@+id/checkBox3"
            app:layout_constraintStart_toStartOf="@+id/checkBox4"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/selection_gender"
            android:button="@drawable/checkbox_women"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/selection_gender"
            android:button="@drawable/checkbox_men"
            app:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/male"
            android:textColor="@color/bl"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/checkBox4"
            app:layout_constraintStart_toStartOf="@+id/checkBox4"
            app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/female"
            android:textColor="@color/bl"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/checkBox3"
            app:layout_constraintStart_toStartOf="@+id/checkBox3"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/height"
            android:textColor="@color/bl"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/checkBox4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:thumb="@drawable/thumb_seekbar"
            app:layout_constraintEnd_toEndOf="@+id/checkBox3"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/txt_mini"
            android:layout_width="5dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:srcCompat="@drawable/mini_height" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:srcCompat="@drawable/med_height" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/_50cm"
            android:textColor="@color/bl"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/_300cm"
            android:textColor="@color/bl"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/lbl_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="150 cm"
            android:textColor="@color/bl"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="@+id/seekBar" />

        <!--    Component Two Seekbar-->
        <TextView
            android:id="@+id/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/weight"
            android:textColor="@color/bl"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <SeekBar
            android:id="@+id/seekBarTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:thumb="@drawable/thumb_seekbar"
            app:layout_constraintEnd_toEndOf="@+id/checkBox3"
            app:layout_constraintStart_toStartOf="@+id/text_weight"
            app:layout_constraintTop_toBottomOf="@+id/text_weight" />

        <ImageView
            android:id="@+id/imgMini"
            android:layout_width="5dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBarTwo"
            app:layout_constraintStart_toStartOf="@+id/seekBarTwo"
            app:srcCompat="@drawable/mini_height" />

        <ImageView
            android:id="@+id/imgMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBarTwo"
            app:layout_constraintEnd_toEndOf="@+id/seekBarTwo"
            app:srcCompat="@drawable/med_height" />

        <TextView
            android:id="@+id/txtMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/_30kg"
            android:textColor="@color/bl"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/seekBarTwo"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTwo" />

        <TextView
            android:id="@+id/textMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/_300kg"
            android:textColor="@color/bl"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/seekBarTwo"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTwo" />

        <TextView
            android:id="@+id/lbl_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="30 kg"
            android:textColor="@color/bl"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/seekBarTwo"
            app:layout_constraintStart_toStartOf="@+id/seekBarTwo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@+id/textMax"
            app:layout_constraintTop_toBottomOf="@+id/textMax"
            app:srcCompat="@drawable/btn_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

